<resources>
    <string name="app_name">ReservaSalasApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Reservaciones</string>
    <string name="menu_login">Login</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_map">Mapa</string>
    <string name="menu_reservation">Reservar</string>
    <string name="menu_rule">Reglamento</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>