<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/map_marker_alt_solid"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_reservation"
            android:icon="@drawable/calendar"
            android:title="@string/menu_reservation" />
        <item
            android:id="@+id/nav_rule"
            android:icon="@drawable/book"
            android:title="@string/menu_rule" />
    </group>
</menu>