<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.reservasalasapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.reservasalasapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.reservasalasapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.reservasalasapp.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_reservation"
        android:name="com.example.reservasalasapp.ui.reservations.ReservationFragment"
        android:label="@string/menu_reservation"
        tools:layout="@layout/fragment_reservation" />
    <fragment
        android:id="@+id/nav_rule"
        android:name="com.example.reservasalasapp.ui.rules.RuleFragment"
        android:label="@string/menu_rule"
        tools:layout="@layout/fragment_rule" />

</navigation>